tests/purs/failing/FoldableInstance4.out
Error found:
in module [33mFoldableInstance4[0m
at tests/purs/failing/FoldableInstance4.purs:8:1 - 8:27 (line 8, column 1 - line 8, column 27)

  No type class instance was found for
  [33m                                      [0m
  [33m  Data.Foldable.Foldable (Function t3)[0m
  [33m                                      [0m
  The instance head contains unknown type variables. Consider adding a type annotation.

while applying a function [33mfoldl[0m
  of type [33mFoldable t0 => (t1 -> t2 -> t1) -> t1 -> t0 t2 -> t1[0m
  to argument [33m$f1[0m
while inferring the type of [33mfoldl $f1[0m

where [33mt0[0m is an unknown type
      [33mt2[0m is an unknown type
      [33mt1[0m is an unknown type
      [33mt3[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

